# SemanticGAN

./: .gitattributes  .gitignore  README.md  dashboard_data.json  index.html  pyproject.toml  requirements.txt  setup.py  styles.css
.github/workflows/: daily-experiment.yml  sync-results.yml
checkpoints/: gan_latest.pth
data/processed/: kg_mappings.json  kg_triples_ids.txt  training_log.csv
data/synthetic/: generated_2025-12-20_08-13.txt  generated_2025-12-23_16-18.txt  generated_2025-12-24_13-16.txt
paper/: main.tex
scripts/: plot_training.py  prepare_dblp_kg.py  train_gan.py  update_dashboard.py  visualize_interactive.py
semanticgan/: __init__.py  dataset.py  models.py
src/: dataset.py  models.py
